--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,1 +1,26 @@
 <h1>proile</h1>
+<h1><a href="/">home</a></h1>
+<img src="{{image}}" alt="image"/>
+
+<h4>{{name}}</h4>
+<h4>{{firstName}}</h4>
+<h4>{{username}}</h4>
+<h4>{{email}}</h4>
+
+
+
+<h2 >
+
+        {{#each user}}
+        <div class="col-md-4 col-12 text-center">
+            <h2><a href="/profile/{{id}}">{{name}}</a></h2>
+        </div>
+        {{/each}}
+        
+       
+<h3>By ID</h3>
+<ul>
+    {{#each user}}
+    <li><a href="/profile">{{ username }}</a></li>
+    {{/each}}
+</ul>
