--- a/views/products.handlebars
+++ b/views/products.handlebars
@@ -1,1 +1,18 @@
 <h1>Products page</h1>
+ {{#each products}}
+        <div class="col-md-4 col-12 text-center">
+            <h2><a href="/products">{{name}}</a></h2>
+        </div>
+        {{/each}}
+        
+
+<h4>{{name}}</h4>
+<h4>{{produitName}}</h4>
+<h4>{{produitPix}}</h4>
+<h4>{{ville}}</h4>
+<p><img src="{{image}}" alt="image"></p>
+
+
+
+
+       
